fix: allow to trigger on tags

--- a/tests/08_v2_checkout.yml
+++ b/tests/08_v2_checkout.yml
@@ -64,6 +64,8 @@ testcases:
             push:
               branches:
               - ma*
+              tags:
+              - v*
           jobs:
             init:
               runs-on: 
