test: fix contrib unit tests
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/cli/cdsctl/Makefile
+++ b/cli/cdsctl/Makefile
@@ -19,9 +19,6 @@ TARGET_BINARIES := $(foreach DIST, $(filter-out darwin/386,$(TARGET_DISTS)), $(T
 TARGET_BINARIES_VARIANT := $(addsuffix -nokeychain, $(filter %linux-amd64 %darwin-amd64 %darwin-arm64,$(TARGET_BINARIES)))
 
 GO_BUILD = go build
-GO_LINT = ${GOPATH}/bin/gometalinter
-GO_COV_MERGE = ${GOPATH}/bin/gocovmerge
-GO_GO2XUNIT = ${GOPATH}/bin/go2xunit
 
 PKGS_COMMA_SEP = go list -f '{{ join .Deps "\n" }}{{"\n"}}{{.ImportPath}}' . | grep github.com/ovh/cds | grep -v vendor | tr '\n' ',' | sed 's/,$$//'
 
@@ -40,14 +37,17 @@ $(TARGET_DIR):
 	$(info create $(TARGET_DIR) directory)
 	@mkdir -p $(TARGET_DIR)
 
+GO_LINT = ${GOPATH}/bin/gometalinter
 $(GO_LINT):
-	go get -u github.com/alecthomas/gometalinter
+	go install github.com/alecthomas/gometalinter@latest
 
+GO_COV_MERGE = ${GOPATH}/bin/gocovmerge
 $(GO_COV_MERGE):
-	go get -u github.com/wadey/gocovmerge
+	go install github.com/wadey/gocovmerge@latest
 
+GO_GO2XUNIT = ${GOPATH}/bin/go2xunit
 $(GO_GO2XUNIT):
-	go get -u github.com/tebeka/go2xunit
+	go install github.com/tebeka/go2xunit@latest
 
 default: build
 
