feat(api,hooks): add commit message of hook filter + rework changesets (#7038)

--- a/tests/08_v2_checkout.yml
+++ b/tests/08_v2_checkout.yml
@@ -60,7 +60,12 @@ testcases:
             image: buildpack-deps:buster
         workflows/checkout.yaml:
           name: {{.cds_workflow}}
-          on: [push]
+          on:
+            push:
+              branches:
+              - ma*
+              tags:
+              - v*
           jobs:
             init:
               runs-on: 
