--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -203,4 +203,4 @@ testcases:
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}"
 
   - name: Display logs
-    script: cat *
+    script: ls -al
