--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -153,7 +153,7 @@ testcases:
                   #!/bin/bash
                   echo "md5 is ${{ result('generic', 'foo.txt').md5  }}"
         annotations:
-          md5: ${{ result('generic', 'foo.txt').md5  }}
+          md5: ${{ result('generic', 'foo.txt').md5 }}
 
   - name: Check CDS project analyses
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -195,12 +195,12 @@ testcases:
       - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
     retry: 150
     delay: 1
-    vars:
-      workflowRunID:
-        from: result.systemoutjson.systemoutjson0.id
-
-  - name: Download logs
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}"
-
-  - name: Display logs
-    script: ls -al
+#     vars:
+#       workflowRunID:
+#         from: result.systemoutjson.systemoutjson0.id
+# 
+#   - name: Download logs
+#     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}"
+# 
+#   - name: Display logs
+#     script: ls -al
