--- a/tests/04_sc_workflow_create_run_join.yml
+++ b/tests/04_sc_workflow_create_run_join.yml
@@ -22,7 +22,6 @@ testcases:
     assertions:
     - result.code ShouldEqual 0
     - "result.systemout ShouldContainSubstring Workflow ITSCWRKFLW3-WORKFLOW #1 has been launched"
-  - script: "sleep 1"
   - script: "{{.cdsctl}} -f {{.cdsctl.config}} workflow status ITSCWRKFLW3 ITSCWRKFLW3-WORKFLOW 1 --format json"
     assertions:
     - result.code ShouldEqual 0
@@ -32,6 +31,8 @@ testcases:
     - result.systemoutjson.num ShouldEqual 1
     - result.systemoutjson.status ShouldEqual 'Never Built'
     - result.systemoutjson.tags ShouldContainSubstring triggered_by
+    retry: 30
+    delay: 1
   - script:  "{{.cdsctl}} -f {{.cdsctl.config}} workflow run ITSCWRKFLW3 ITSCWRKFLW3-WORKFLOW -d '{\"git.branch\": \"master\"}'"
     assertions:
     - result.code ShouldEqual 0
