feat: add cache plugin

--- a/tests/01_init_plugins.yml
+++ b/tests/01_init_plugins.yml
@@ -4,6 +4,9 @@ vars:
   plugins:
     - artifactoryPromote
     - artifactoryRelease
+    - cache
+    - cacheRestore
+    - cacheSave
     - checkout
     - debianPush
     - deployArsenal
