--- a/tests/08_v2_cache.yml
+++ b/tests/08_v2_cache.yml
@@ -95,16 +95,24 @@ testcases:
     - name: Check that the CDS workflow has at least one execution and is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
+        - and: 
         - result.systemoutjson ShouldHaveLength 1
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+        - or:
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Success
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Fail
       retry: 100
       delay: 1
       vars:
         workflowRunID:
           from: result.systemoutjson.systemoutjson0.id
+        workflowRunStatus:  
+          from: result.systemoutjson.systemoutjson0.status  
 
-    - name: Get Workflow run info
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.workflowRunID}}"
+    - name: Get run info
+      script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.workflowRunID}}"     
+
+    - name: Get job info
+      script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}}"     
         
     - name: Download and check logs
       script: |-
@@ -129,3 +137,8 @@ testcases:
         cat {{.cds_workflow}}-1-1-getCache-checkHit | grep "true"
       retry: 60
       delay: 1
+    
+    - name: Echo Status
+      script: echo {{.workflowRunStatus}}
+      assertions:
+      - result.systemout ShouldEqual Success
