fix: rework cache key

--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -177,14 +177,19 @@ testcases:
           pluginCache:
             runs-on: "{{.worker_model}}"
             steps:
+              - id: generateKey
+                run: worker export ts $(date +%s)
               - id: cacheGet
                 uses: actions/cache
                 with:
-                  key: mycache
+                  key: ${{ steps.generateKey.outputs.ts }}
                   path: myfile
               - id: cacheCheck
-                run: echo ${{ steps.cacheCheck.outputs.cache-hit }}    
+                run: echo ${{ steps.cacheGet.outputs.cache-hit }}    
               - run: date > myfile
+            outputs:
+              cacheKey:
+                value: ${{ steps.generateKey.outputs.ts }}
           getCache:
             runs-on: "{{.worker_model}}"
             needs: [pluginCache]
@@ -192,7 +197,7 @@ testcases:
               - uses: actions/cacheRestore
                 id: restore
                 with:
-                  key: mycache
+                  key: ${{ jobs.pluginCache.outputs.cacheKey }}
                   path: myfile 
               - id: checkHit
                 run: echo ${{ steps.restore.outputs.cache-hit }} 
@@ -334,7 +339,7 @@ testcases:
     script: "cat {{.cds_workflow}}-1-1-ctx-ctxstep && cat {{.cds_workflow}}-1-1-ctx-ctxstep | grep \"{{.rt_project}}/{{.rt_component}}\""  
 
   - name: Check pluginCache log - cacheCheck
-    script: "cat {{.cds_workflow}}-1-1-pluginCache-cacheCheck | grep \"false\""
+    script: "cat {{.cds_workflow}}-1-1-pluginCache-cacheCheck && cat {{.cds_workflow}}-1-1-pluginCache-cacheCheck | grep \"false\""
   - name: Check pluginCache log - cacheCheck
     script: "cat {{.cds_workflow}}-1-1-pluginCache-Post-cacheGet | grep \"Cache uploaded\""
 
