--- a/tests/08_v2_distant_workflow.yml
+++ b/tests/08_v2_distant_workflow.yml
@@ -163,12 +163,12 @@ testcases:
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo_code}} {{.cds_workflow}} --format json"
     assertions:
       - result.systemoutjson ShouldHaveLength 2
-      - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
+      - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
     retry: 150
     delay: 1
     vars:
       workflowRunID:
-        from: result.systemoutjson.systemoutjson1.id    
+        from: result.systemoutjson.systemoutjson0.id    
   - name: Download and check logs
     script: |-
       #!/bin/bash
@@ -177,8 +177,13 @@ testcases:
       mkdir -p $FILE && cd $FILE
       {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}
       # Check git_sha
-      cat {{.cds_workflow}}-1-1-init-gitinfo && cat {{.cds_workflow}}-1-1-init-gitinfo | grep "GIT_SHA={{.commitSrc}}"
+      cat {{.cds_workflow}}-1-1-init-gitinfo && cat {{.cds_workflow}}-2-1-init-gitinfo | grep "GIT_SHA={{.commitSrc}}"
       # Check workflow_sha
-      cat {{.cds_workflow}}-1-1-init-gitinfo && cat {{.cds_workflow}}-1-1-init-gitinfo | grep "CDS_WORKFLOW_SHA={{.commitCode}}"
+      cat {{.cds_workflow}}-1-1-init-gitinfo && cat {{.cds_workflow}}-2-1-init-gitinfo | grep "CDS_WORKFLOW_SHA={{.commitCode}}"
     retry: 60
     delay: 1
+
+
+
+    Assign 'commitSrc' value '16cdcdd03d73f0249e7fdee48d4980cac797142c'
+    Assign 'commitCode' value '7b0f5d2e8d270852131a0f8f3f9c5272a373b571' -- CODE
