fix: install addrun result

--- a/tests/01_init_plugins.yml
+++ b/tests/01_init_plugins.yml
@@ -2,6 +2,7 @@ name: plugin initialization
 
 vars:
   plugins:
+    - addRunResult
     - artifactoryPromote
     - artifactoryRelease
     - cache
