--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -241,7 +241,7 @@ testcases:
                   version: ${{ steps.packagePython.outputs.pkgVersion }}
                   wheel: "true"
           PromoteAndRelease:
-            needs: [Debian-Job, Python-Job, Helm-Job]
+            needs: [Debian-Job, Python-Job, Helm-Job, PushFiles]
             runs-on: "{{.worker_model}}"
             steps:
               - uses: actions/artifactoryPromote
@@ -261,7 +261,7 @@ testcases:
                 path: pool/package-linux-amd64.deb
                 type: debian
             - id: uploadTerraform
-              run: curl --fail -X PUT -T terraform-linux-amd64.tar.gz -u "${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN_NAME}:${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN}" "${CDS_INTEGRATION_ARTIFACT_MANAGER_URL}{{.rt_project}}-{{.rt_component}}-terraform/terraform-linux-amd64.tar.gz;terraform.name=myprovider;terraform.namespace=ovh;terraform.version=0.0.1;terraform.flavor=linux-amd64;terraform.type=provider"    
+              run: curl --fail -X PUT -T terraform-linux-amd64.tar.gz -u "${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN_NAME}:${CDS_INTEGRATION_ARTIFACT_MANAGER_TOKEN}" "${CDS_INTEGRATION_ARTIFACT_MANAGER_URL}{{.rt_project}}-{{.rt_component}}-terraformProvider/terraform-linux-amd64.tar.gz;terraform.name=myprovider;terraform.namespace=ovh;terraform.version=0.0.1;terraform.flavor=linux-amd64;terraform.type=provider"    
             - uses: actions/addRunResult
               with:
                 path: terraform-linux-amd64.tar.gz
